--- a/dockerfile/config/producer.properties
+++ b/dockerfile/config/producer.properties
@@ -1,5 +1,5 @@
-bootstrap.servers=192.168.188.22:3501
-schema.registry.url=http://192.168.188.22:3502
+bootstrap.servers=driver-testbed.eu:3501
+schema.registry.url=http://driver-testbed.eu:3502
 compression.type=gzip
 acks=all
 retries=0
