updated gateway version, now uses java adapter 1.0.12 from maven repo.

--- a/gateway-geojson/pom.xml
+++ b/gateway-geojson/pom.xml
@@ -1,10 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>driver.eu</groupId>
 	<artifactId>gateway-edxlem</artifactId>
-	<version>1.0.7</version>
+	<version>1.0.8</version>
 	<packaging>jar</packaging>
 
 	<name>DRIVER Java CSS to EDXL-EM Gateway Converter</name>
@@ -21,11 +22,22 @@
 		<maven.compiler.version>3.7.0</maven.compiler.version>
 	</properties>
 
+	<repositories>
+		<repository>
+			<id>driver-mvn-repo</id>
+			<url>https://raw.github.com/DRIVER-EU/maven-repo/master/</url>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>always</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
 	<dependencies>
 		<dependency>
 			<groupId>driver.eu</groupId>
 			<artifactId>testbed-adapter</artifactId>
-			<version>1.0.9</version>
+			<version>1.0.12</version>
 		</dependency>
 	</dependencies>
 
