--- a/gateway-geojson/pom.xml
+++ b/gateway-geojson/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>driver.eu</groupId>
-	<artifactId>gateway-edxlem</artifactId>
+	<artifactId>gateway-xvr-geojson</artifactId>
 	<version>1.0.8</version>
 	<packaging>jar</packaging>
 
-	<name>DRIVER Java CSS to EDXL-EM Gateway Converter</name>
+	<name>DRIVER Java XVR Simulation to CIS GeoJSON Gateway Converter</name>
 	<url>http://www.driverproject.eu</url>
 
 	<properties>
@@ -37,7 +37,7 @@
 		<dependency>
 			<groupId>driver.eu</groupId>
 			<artifactId>testbed-adapter</artifactId>
-			<version>1.0.12</version>
+			<version>1.0.13</version>
 		</dependency>
 	</dependencies>
 
