--- a/gateway-geojson/config/consumer.properties
+++ b/gateway-geojson/config/consumer.properties
@@ -1,5 +1,5 @@
-bootstrap.servers=driver-testbed.eu:3501
-schema.registry.url=http://driver-testbed.eu:3502
+bootstrap.servers=localhost:3501
+schema.registry.url=http://localhost:3502
 group.id=gateway_converter_xvr_geojson
 enable.auto.commit=true
 auto.offset.reset=latest
